[gd_scene load_steps=5 format=3 uid="uid://rrtklejik3lk"]

[ext_resource type="Script" uid="uid://crmo2e7pjhbjn" path="res://Scripts/GameScripts/HUD/action_forecast.gd" id="1_bo1h4"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Styles/label_style.tres" id="1_ep6pn"]
[ext_resource type="LabelSettings" uid="uid://cmeaa4ys48qvb" path="res://Resources/Styles/label_settings.tres" id="2_bo1h4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1674c"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0804231, 0.173648, 0.2034, 0.588235)

[node name="ActionForecast" type="PanelContainer" node_paths=PackedStringArray("UnitNameLabel", "TargetNameLabel", "DamageLabel", "TargetHPLabel")]
z_index = 15
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1674c")
script = ExtResource("1_bo1h4")
UnitNameLabel = NodePath("VBoxContainer/UnitNameLabel")
TargetNameLabel = NodePath("VBoxContainer/TargetNameLabel")
DamageLabel = NodePath("VBoxContainer/DamageLabel")
TargetHPLabel = NodePath("VBoxContainer/TargetHPLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="UnitNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("1_ep6pn")
label_settings = ExtResource("2_bo1h4")

[node name="TargetNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("1_ep6pn")
label_settings = ExtResource("2_bo1h4")

[node name="DamageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("1_ep6pn")
label_settings = ExtResource("2_bo1h4")

[node name="TargetHPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("1_ep6pn")
label_settings = ExtResource("2_bo1h4")
